# DURKA

./: CMakeLists.txt  README.md  bugs.txt  config.txt  документация курсач тп.docx  документация.docx
Client/: CMakeLists.txt  a.out  main.cpp  network.cpp  network.h
Server/: CMakeLists.txt  a.out  asylum.cpp  asylum.h  doctors.txt  main.cpp  menu.cpp  menu.h  network.cpp  network.h  patients.txt
docs/: Documentation.docx
src/client/: CMakeLists.txt  main.cpp  menu.cpp  menu.h  network.cpp  network.h
src/server/: CMakeLists.txt  asylum.h  main.cpp  menu.cpp  network.h
test/: CMakeLists.txt  test_client.cpp  test_server.cpp
